# pymort

./: .gitattributes  .gitignore  CITATION.cff  README.md  createTableIDs.ipynb  createTableNamesFile.ipynb  low-level-api-proposal.html  low-level-api-proposal.ipynb  multiIndex.ipynb  pyproject.toml  relational-api.ipynb  requirements.txt  scratch.ipynb
.devcontainer/: devcontainer.json
.github/workflows/: learn-github-actions.yml  pytest.yml
archive-2021-Oct-17-051924/: t1004.xml  t1012.xml  t1013.xml  t1018.xml  t1020.xml  t1030.xml  t1031.xml  t1033.xml  t1043.xml  t1048.xml  t1053.xml  t1054.xml  t1057.xml  t1065.xml  t1071.xml  t1083.xml  t1084.xml  t109.xml  t110.xml  t1100.xml  t1101.xml  t1117.xml  t1118.xml  t1121.xml  t113.xml  t1134.xml  t1139.xml  t1143.xml  t115.xml  t1152.xml  t1154.xml  t1155.xml  t1158.xml  t1162.xml  t1164.xml  t1170.xml  t1172.xml  t1175.xml  t1177.xml  t1179.xml  (+812 more)
pymort/: XML.py  __init__.py  groupings.json  loader.py  map.py  parser.py  pyXML.py  relational.py  tableNames.py
pymort/SOA_Tables_20210915/: t1004.xml  t1010.xml  t1014.xml  t1023.xml  t1026.xml  t1027.xml  t1028.xml  t1039.xml  t1040.xml  t1046.xml  t1050.xml  t1055.xml  t1056.xml  t1061.xml  t1062.xml  t1064.xml  t1066.xml  t107.xml  t1071.xml  t1080.xml  t11.xml  t1102.xml  t112.xml  t1122.xml  t1124.xml  t1141.xml  t1146.xml  t1164.xml  t1166.xml  t1169.xml  t1170.xml  t1181.xml  t1186.xml  t1187.xml  t1189.xml  t119.xml  t1198.xml  t1200.xml  t1206.xml  (+808 more)
scripts/: createRelational.py
tests/: test_XML.py  test_pyXML.py  test_pymort.py  test_relational.py
(+3640 files in other folders)
