[tool.poetry]
name = "pymort"
version = "2.0.1"
description = ""
authors = ["Matthew Caseres <matthewcaseres@outlook.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
pandas = ">=1.3.4"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
ipykernel = "^6.4.1"
pytest-cov = "^4.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
